// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section /> it renders a dark Section 1`] = `
.c0 {
  padding: 1.25rem 0;
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    dark
     
  </div>
</div>
`;

exports[`<Section /> it renders a default Section 1`] = `
.c0 {
  padding: 1.25rem 0;
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    default
     
  </div>
</div>
`;

exports[`<Section /> it renders a light Section 1`] = `
.c0 {
  padding: 1.25rem 0;
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    light
     
  </div>
</div>
`;

exports[`<Section /> it renders a white Section 1`] = `
.c0 {
  padding: 1.25rem 0;
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    white
     
  </div>
</div>
`;
